--- a/pesde.toml
+++ b/pesde.toml
@@ -1,5 +1,5 @@
 name = "dialoguemaker/response"
-version = "0.1.5"
+version = "0.1.6"
 description = "A shortcut class to create \"Response\"-type Dialogue objects."
 authors = ["Christian Toney <christian.toney@beastslash.com>"]
 repository = "https://github.com/DialogueMaker/response"
@@ -9,11 +9,12 @@ includes = [
   "README.md",
   "LICENSE",
   "src/**/*.lua",
+  "src/**/*.luau",
 ]
 
 [target]
 environment = "roblox"
-lib = "src/init.lua"
+lib = "src/init.luau"
 build_files = ["src"]
 
 [engines]
@@ -40,5 +41,5 @@ react-roblox = { wally = "jsdotlua/react-roblox", version = "^17.2.1" }
 react = { wally = "jsdotlua/react", version = "^17.2.1" }
 
 [dependencies]
-DialogueMakerTypes = { name = "dialoguemaker/types", version = "^0.1.25" }
-Dialogue = { name = "dialoguemaker/dialogue", version = "^0.1.10" }
+DialogueMakerTypes = { name = "dialoguemaker/types", version = "^0.1.30" }
+Dialogue = { name = "dialoguemaker/dialogue", version = "^0.1.11" }
