--- a/.github/workflows/publish-pesde-version.yml
+++ b/.github/workflows/publish-pesde-version.yml
@@ -2,11 +2,17 @@ name: Publish new version to pesde registry
 
 on:
   workflow_dispatch:
+  release:
+    types: [released, prereleased]
+
+concurrency:
+  group: ${{ github.workflow }}
 
 jobs:
   build:
     name: Build project
     runs-on: ubuntu-latest
+    environment: Production
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.7
@@ -15,7 +21,9 @@ jobs:
         uses: axiom-co/setup-pesde@v0.4.1
         with:
           version: v0.7.0-rc.4+registry.0.2.3-rc.2
+          token: ${{ secrets.PESDE_TOKEN }}
 
-      - name: Install packages
+      - name: Publish to pesde registry
         run: |
-          pesde install
+          pesde publish
+          y
