--- a/.github/workflows/publish-pesde-version.yml
+++ b/.github/workflows/publish-pesde-version.yml
@@ -23,6 +23,10 @@ jobs:
           version: v0.7.0-rc.4+registry.0.2.3-rc.2
           token: ${{ secrets.PESDE_TOKEN }}
 
+      - name: Install dependencies
+        run: |
+          pesde install
+
       - name: Publish to pesde registry
         run: |
           pesde publish
