--- a/.github/workflows/publish-pesde-version.yml
+++ b/.github/workflows/publish-pesde-version.yml
@@ -29,5 +29,4 @@ jobs:
 
       - name: Publish to pesde registry
         run: |
-          pesde publish
-          y
+          echo 'Yes' | pesde publish
