--- a/.github/workflows/publish-pesde-version.yml
+++ b/.github/workflows/publish-pesde-version.yml
@@ -11,7 +11,7 @@ concurrency:
 jobs:
   build:
     name: Build project
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     environment: Production
     steps:
       - name: Checkout repository
@@ -19,14 +19,11 @@ jobs:
 
       - name: Set up pesde
         uses: axiom-co/setup-pesde@v0.4.1
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          version: v0.7.0-rc.4+registry.0.2.3-rc.2
           token: ${{ secrets.PESDE_TOKEN }}
 
       - name: Install dependencies
         run: |
           pesde install
-
-      - name: Publish to pesde registry
-        run: |
-          echo 'Yes' | pesde publish
