--- a/.github/workflows/publish-pesde-version.yml
+++ b/.github/workflows/publish-pesde-version.yml
@@ -11,7 +11,7 @@ concurrency:
 jobs:
   build:
     name: Build project
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     environment: Production
     steps:
       - name: Checkout repository
