--- a/.github/workflows/publish-pesde-version.yml
+++ b/.github/workflows/publish-pesde-version.yml
@@ -27,3 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           pesde install
+
+      - name: Publish to pesde registry
+        run: |
+          pesde publish -y
