--- a/pesde.toml
+++ b/pesde.toml
@@ -1,9 +1,9 @@
 name = "dialoguemaker/response"
-version = "0.1.7"
+version = "0.1.8"
 description = "A shortcut class to create \"Response\"-type Dialogue objects."
 authors = ["Christian Toney <christian.toney@beastslash.com>"]
 repository = "https://github.com/DialogueMaker/response"
-license = "GPL-3.0"
+license = "MPL-2.0"
 includes = [
   "pesde.toml",
   "README.md",
@@ -42,4 +42,4 @@ react = { wally = "jsdotlua/react", version = "^17.2.1" }
 
 [dependencies]
 DialogueMakerTypes = { name = "dialoguemaker/types", version = "^0.1.31" }
-Dialogue = { name = "dialoguemaker/dialogue", version = "^0.1.11" }
+Dialogue = { name = "dialoguemaker/dialogue", version = "^0.1.12" }
