--- a/.github/workflows/publish-pesde-version.yml
+++ b/.github/workflows/publish-pesde-version.yml
@@ -11,7 +11,7 @@ concurrency:
 jobs:
   build:
     name: Build project
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     environment: Production
     steps:
       - name: Checkout repository
