--- a/pesde.toml
+++ b/pesde.toml
@@ -1,5 +1,5 @@
 name = "dialoguemaker/response"
-version = "0.1.8"
+version = "0.1.9"
 description = "A shortcut class to create \"Response\"-type Dialogue objects."
 authors = ["Christian Toney <christian.toney@beastslash.com>"]
 repository = "https://github.com/DialogueMaker/response"
@@ -8,8 +8,8 @@ includes = [
   "pesde.toml",
   "README.md",
   "LICENSE",
-  "src/**/*.lua",
   "src/**/*.luau",
+  "!src/**/*.test.luau",
 ]
 
 [target]
@@ -36,6 +36,7 @@ scripts = { name = "pesde/scripts_rojo", version = "^0.1.0", target = "lune" }
 rojo = { name = "pesde/rojo", version = "^7.4.4", target = "lune" }
 luau_lsp = { name = "pesde/luau_lsp", version = "^1.47.0", target = "lune" }
 react-roblox = { wally = "jsdotlua/react-roblox", version = "^17.2.1" }
+ijw = { name = "beastslash/ijw", version = "^1.0.0" }
 
 [peer_dependencies]
 react = { wally = "jsdotlua/react", version = "^17.2.1" }
