--- a/.github/workflows/run-luau-tests.yml
+++ b/.github/workflows/run-luau-tests.yml
@@ -21,6 +21,7 @@ jobs:
     if: ${{ !github.event.pull_request.draft }}
     name: Build testing place
     runs-on: ubuntu-24.04
+    timeout-minutes: 1
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.7
@@ -47,6 +48,7 @@ jobs:
     name: Deploy testing place to Roblox
     environment: Production
     runs-on: ubuntu-24.04
+    timeout-minutes: 2
     needs: build
     steps:
       - name: Download project
@@ -71,6 +73,7 @@ jobs:
     runs-on: ubuntu-24.04
     environment: Production
     name: Run test cases
+    timeout-minutes: 2
     needs: publish
     steps:
       - name: Checkout repository
